--- a/src/main/resources/templates/th/member/payment/nonMemberPayment.html
+++ b/src/main/resources/templates/th/member/payment/nonMemberPayment.html
@@ -4,7 +4,7 @@
       layout:decorator="th/layout/defaultLayout"> <!-- 이거 쓰면 이니시스 안먹힘 -->
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>nonMember</title>
     <th:block layout:fragment="css">
         <link rel="stylesheet" th:href="@{/css/mainContent.css}">
         <link rel="stylesheet" th:href="@{/css/basket.css}">
@@ -58,22 +58,18 @@
                         <tbody data-hj-suppress="" data-hj-ignore-attribute="">
                         <tr class="production" data-id="41033" data-cost="55900" data-count="1" data-name="[핀란디아] [오늘의딜] 데이브 화이트/블랙 메쉬 책상의자 5colors">
                             <td>
-                                <div class="information">
-                                    <img src="" alt="320">
+                                <div class="information" th:each="list, listStat : ${nonMemberBasketList}">
+                                    <img th:src="@{'/uploadImg/'+${list.getProductVO().getProductMainImg()}}" alt="320">
                                     <div>
-                                        <div class="name">[핀란디아] [오늘의딜] 데이브 화이트/블랙 메쉬 책상의자 5colors</div>
-                                        <div class="option">프레임컬러: 블랙 / 패브릭컬러: 그린</div>
+                                        <div class="name" th:text="${list.productName}"></div>
+                                        <div class="option" th:text="${list.productColor}"></div>
                                         <div class="cost_count">
-                                            <div class="cost">55,900원</div>
+                                            <div class="cost" th:text="${list.getProductVO().getPurchasePrice()}"></div>
                                             <div class="divider">|</div>
-                                            <div class="count">1개</div>
+                                            <div class="count" th:text="1개"></div>
                                         </div>
                                     </div>
                                 </div>
-                            </td>
-                            <td class="delivery_fee" data-id="_41543208">
-                                <div class="type">무료배송</div>
-                                <div class="seller">핀란디아</div>
                             </td>
                         </tr>
                         </tbody>
@@ -155,7 +151,8 @@
                         <div class="field">
                             <div class="label">이름</div>
                             <div class="input">
-                                <input autocomplete="off" data-hj-suppress="" class="half" type="text" name="order[payer_name]" id="order_payer_name">
+                                <input autocomplete="off" data-hj-suppress="" class="half"
+                                       type="text" name="order[payer_name]" id="order_payer_name">
                             </div>
                         </div>
                         <div class="field">
@@ -288,55 +285,6 @@
         </div>
     </div>
 
-    <script>
-
-
-        function execPostCode() {
-            new daum.Postcode({
-                oncomplete: function(data) {
-                    // 팝업에서 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분.
-
-                    // 도로명 주소의 노출 규칙에 따라 주소를 조합한다.
-                    // 내려오는 변수가 값이 없는 경우엔 공백('')값을 가지므로, 이를 참고하여 분기 한다.
-                    var fullRoadAddr = data.roadAddress; // 도로명 주소 변수
-                    var extraRoadAddr = ''; // 도로명 조합형 주소 변수
-
-                    // 법정동명이 있을 경우 추가한다. (법정리는 제외)
-                    // 법정동의 경우 마지막 문자가 "동/로/가"로 끝난다.
-                    if(data.bname !== '' && /[동|로|가]$/g.test(data.bname)){
-                        extraRoadAddr += data.bname;
-                    }
-                    // 건물명이 있고, 공동주택일 경우 추가한다.
-                    if(data.buildingName !== '' && data.apartment === 'Y'){
-                        extraRoadAddr += (extraRoadAddr !== '' ? ', ' + data.buildingName : data.buildingName);
-                    }
-                    // 도로명, 지번 조합형 주소가 있을 경우, 괄호까지 추가한 최종 문자열을 만든다.
-                    if(extraRoadAddr !== ''){
-                        extraRoadAddr = ' (' + extraRoadAddr + ')';
-                    }
-                    // 도로명, 지번 주소의 유무에 따라 해당 조합형 주소를 추가한다.
-                    if(fullRoadAddr !== ''){
-                        fullRoadAddr += extraRoadAddr;
-                    }
-
-                    // 우편번호와 주소 정보를 해당 필드에 넣는다.
-                    console.log(data.zonecode);
-                    console.log(fullRoadAddr);
-
-
-                    $("[name=zipCode]").val(data.zonecode);
-                    $("[name=receivedAt]").val(fullRoadAddr);
-
-                    /* document.getElementById('signUpUserPostNo').value = data.zonecode; //5자리 새우편번호 사용
-                    document.getElementById('signUpUserCompanyAddress').value = fullRoadAddr;
-                    document.getElementById('signUpUserCompanyAddressDetail').value = data.jibunAddress; */
-                }
-            }).open();
-        }
-
-
-    </script>
-
 
 
 
@@ -452,17 +400,6 @@
 <form method="post" action="/kakaoPay">
     <button>카카오페이로 결제하기</button>
 </form>
-<!--
-<form name="fr" onsubmit="return check()">
-
-
-<form id="edit_order" class="edit_order"  action="/basketPop" name="fr" onsubmit="return check()" accept-charset="UTF-8" method="get">
-        </form>
--->
-
-
-
-
 
 </body>
 </html>
