--- a/src/main/resources/templates/th/fragments/header.html
+++ b/src/main/resources/templates/th/fragments/header.html
@@ -70,8 +70,9 @@
                             <div class="nav-wrapper">
                                 <form class="form-inline ml-0 ml-md-3" action="/productions/searchlist" method="get">
                                     <div class="input-group input-group-sm">
-                                        <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search"
+                                        <input class="form-control form-control-sm ml-3 w-75" type="search" placeholder="Search" aria-label="Search"
                                                name="index" id="${index}" th:value="${index?:''}" onfocus="this.value=''">
+
                                         <div class="input-group-append">
                                             <button class="btn btn-navbar" type="submit">
                                                 <i class="fas fa-search"></i>
@@ -101,7 +102,7 @@
                             <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/signup}">
                                 <button sec:authorize="isAnonymous()" class="btn btn-outline-info my-2 my-sm-0 btn-sm" type="submit">회원가입</button>
                             </form>
-                            <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/mypage}">
+                            <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/user}">
                                 <button sec:authorize="isAuthenticated()" class="btn btn-outline-danger my-2 my-sm-0 btn-sm" type="submit">마이페이지</button>
                             </form>
 <!--                            <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/customLogout}">-->
