--- a/src/main/resources/templates/th/member/payment/memberPayment.html
+++ b/src/main/resources/templates/th/member/payment/memberPayment.html
@@ -86,7 +86,7 @@
                         <div class="field">
                             <div class="label">받는분</div>
                             <div class="input">
-                                <input presence="true" autocomplete="off" class="can_copy half" data-hj-suppress="" type="text" name="recipient" id="recipient">
+                                <input presence="true" autocomplete="off" class="can_copy half" data-hj-suppress="" type="text" name="order_recipient" id="order_recipient">
                                 <input type="hidden" name="order[received_name]" id="order_received_name" value="">
                             </div>
                         </div>
@@ -346,7 +346,6 @@
 
 
     <script>
-        //모두 체크하기
         var name = "";
         function InitValue(frm){
 
