--- a/src/main/resources/templates/th/member/mypage/profile/memberProfile.html
+++ b/src/main/resources/templates/th/member/mypage/profile/memberProfile.html
@@ -13,7 +13,12 @@
         <img th:src="@{'/uploadImg'+${memprofile.memberImg}}" style="width: 300px; height: 300px;"/>
     </div>
     <div class="form-group">
-        <p><h3><th:block th:text="${memprofile.memberId}" id="foll" name="foll"/></h3></p>
+
+
+            <input type="hidden" id="fol" name="fol" th:value="${memprofile.memberId}"/>
+            <p><h3><th:block th:text="${memprofile.memberId}"/></h3></p>
+
+
     </div>
     <div class="form-group">
         <p>팔로워<th:block th:text="${followCount}"></th:block>
@@ -23,6 +28,7 @@
         <input type="button" th:if="${fcount == 0}" id="follow" name="follow" value="팔로우">
         <input type="button" th:if="${fcount == 1}" id="followcancel" name="followcancel" value="팔로우취소">
         <input type="button" id="notesend" name="notesend" value="쪽지보내기">
+
     </div>
     <div class="form-group">
         <th:block th:text="${memprofile.memberIntro}"/>
